--- a/个性化设置.md
+++ b/个性化设置.md
@@ -1,10 +1,13 @@
-845369629@qq.com
+1. 845369629@qq.com
 
-zXD123321
+    zXD123321
 
+2. mysql
 
+   root 
 
-root 
+   rbladmin
 
-rbladmin
-
+3. 路由器：zxd.070707
+4. gjj 702220
+5. 
