--- a/个性化设置.md
+++ b/个性化设置.md
@@ -8,6 +8,15 @@
 
    rbladmin
 
-3. 路由器：zxd.070707
-4. gjj 702220
-5. 
+3. 路由器：zxd.070707. ygwddfym
+
+4. gjj 702220zxd
+
+6. Linerbl@163.com
+
+   123321zXD
+   
+6. 12306
+   zlg928181736
+   zlg845369629
+
