--- a/啊_基础.md
+++ b/啊_基础.md
@@ -22,13 +22,13 @@
 
      ​			初识容量16，负载因子0.75，扩容1倍
 
-     ​			当发生hash冲突时，使用拉链法处理，jdk1.8->当链表长度大于8时转化为红黑树,小雨6时退化为链表
+     ​			当发生hash冲突时，使用拉链法处理，jdk1.8->当链表长度大于8时转化为红黑树,小与6时退化为链表
 
      ​			1.7 头插法，会造成环形链表，1.8改为尾插法
 
      ​			快速失败
      
-     ​		HashTable
+     ​		Hashtable
      
      ​			保留类，不使用
      
@@ -182,30 +182,39 @@
      - 当jvm执行getstatic指令时会初始化类。即程序访问类的静态变量(不是静态常量，常量会被加载到运行时常量池)。
      - 当jvm执行putstatic指令时会初始化类。即程序给类的静态变量赋值。
      - 当jvm执行invokestatic指令时会初始化类。即程序调用类的静态方法。
+     
   2. 使用 `java.lang.reflect` 包的方法对类进行反射调用时如Class.forname("..."),newInstance()等等。 ，如果类没初始化，需要触发其初始化。
+  
   3. 初始化一个类，如果其父类还未初始化，则先触发该父类的初始化。
+  
   4. 当虚拟机启动时，用户需要定义一个要执行的主类 (包含 main 方法的那个类)，虚拟机会先初始化这个类。
-  5. MethodHandle和VarHandle可以看作是轻量级的反射调用机制，而要想使用这2个调用，
-     就必须先使用findStaticVarHandle来初始化要调用的类。
-  6. **「补充，来自[issue745](https://github.com/Snailclimb/JavaGuide/issues/745)」** 当一个接口中定义了JDK8新加入的默认方法（被default关键字修饰的接口方法）时，如果有这个接口的实现类发生了初始化，那该接口要在其之前被初始化。
 
+  5. MethodHandle和VarHandle可以看作是轻量级的反射调用机制，而要想使用这2个调用，
+   就必须先使用findStaticVarHandle来初始化要调用的类。
+     
+6. **「补充，来自[issue745](https://github.com/Snailclimb/JavaGuide/issues/745)」** 当一个接口中定义了JDK8新加入的默认方法（被default关键字修饰的接口方法）时，如果有这个接口的实现类发生了初始化，那该接口要在其之前被初始化。
+  
+7. 初始化顺序图
+  
+   ![](https://img-blog.csdn.net/20180705100306225?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3h5YWppYQ==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
   
 
-  - 类加载器
-
+  
+- 类加载器
+  
     ![ClassLoader](https://my-blog-to-use.oss-cn-beijing.aliyuncs.com/2019-6/classloader_WPS图片.png)
-
+  
     
-
+  
   - **JDK 命令行工具**
 
     这些命令在 JDK 安装目录下的 bin 目录下：
-
+  
     - **`jps`** (JVM Process Status）: 类似 UNIX 的 `ps` 命令。用户查看所有 Java 进程的启动类、传入参数和 Java 虚拟机参数等信息；
     - **`jstat`**（ JVM Statistics Monitoring Tool）:  用于收集 HotSpot 虚拟机各方面的运行数据;
     - **`jinfo`** (Configuration Info for Java) : Configuration Info forJava,显示虚拟机配置信息;
     - **`jmap`** (Memory Map for Java) :生成堆转储快照;
     - **`jhat`** (JVM Heap Dump Browser ) : 用于分析 heapdump 文件，它会建立一个 HTTP/HTML 服务器，让用户可以在浏览器上查看分析结果;
     - **`jstack`** (Stack Trace for Java):生成虚拟机当前时刻的线程快照，线程快照就是当前虚拟机内每一条线程正在执行的方法堆栈的集合。
-
+  
     
