--- a/啊_数据库.md
+++ b/啊_数据库.md
@@ -1,4 +1,4 @@
-开发规范：
+### 开发规范：
 
 1. 避免数据类型的隐式转换
 2. 充分利用索引，避免索引失效
@@ -11,7 +11,7 @@
 
 
 
- MyISAM和InnoDB的区别
+###  MyISAM和InnoDB的区别
 
 1. MyIssAM使用表级锁；InnoDb使用行级锁和表级锁
 
@@ -23,7 +23,7 @@
 
     
 
-事务的四大特性：
+### 事务的四大特性：
 
       1. 原子性（Atomicity）
          事务是一个不可分割的工作单位，事务中的操作要么都发生，要么都不发生。
@@ -38,7 +38,7 @@
 
 
 
- 隔离级别：
+###  隔离级别：
 
 - 读未提交
 
@@ -56,7 +56,7 @@ MVVC实现读未提交和可重复度，
 
 
 
-索引：
+### 索引：
 
 - 主键索引
 
@@ -114,7 +114,7 @@ MVVC实现读未提交和可重复度，
 
 
 
-执行计划
+### 执行计划
 
  explain
 
