--- a/啊_框架.md
+++ b/啊_框架.md
@@ -1,8 +1,21 @@
-1. Spring** 
+1. Spring 
 
    - AOP  IOC
 
+     AOP：动态代理,JDK动态代理,实现InvocationHandler接口;cglib,继承父类
+
+     IOC：控制反转,BeanFactory
+
+   - AOP失效场景及其解决方案
+
+     本类是代理类，在当前类中调用当前类的代理方法，会导致AOP失效
+
+     - 提取方法到其他类
+     - 使用AopContext获取代理对象
+
    - bean 三级缓存 解决循环依赖
+
+     [循环依赖解决](https://blog.csdn.net/u010853261/article/details/77940767)
 
      [一文轻松搞懂 Spring 中 bean 的作用域与生命周期](https://mp.weixin.qq.com/s?__biz=Mzg2OTA0Njk0OA==&mid=2247484865&idx=2&sn=178c6e64e6c12172e77efdd669eb86a7&source=41#wechat_redirect)
 
@@ -53,6 +66,7 @@
 
    
 
+
 3. **Sping Boot**
 
    约定大于配置
@@ -81,8 +95,6 @@
 
    链路追踪
 
-   
-
 5. **dubbo**
 
    zookeeper		服务注册发现中心 奇数台服务器，与偶数台服务器容错率一致，大于一半机器数成为master
@@ -99,10 +111,14 @@
    竞选信息：
 
    1. myid(机器id)
+
    2. 逻辑时钟
+
    3. zxid
+
    4. 选举状态
-   5. 
+
+      
 
 6. **Spring MVC**
 
