--- a/啊_算法.md
+++ b/啊_算法.md
@@ -38,7 +38,7 @@
    }
    ```
 
-2. 二分查找
+2. 2. 二分查找
 
    ```java
      public static int binarySearch(int[] a, int search) {
@@ -64,7 +64,7 @@
        }
    ```
 
-3. 反转链表
+3. 3. 反转链表
 
    ```java
    class ListNode {
@@ -98,11 +98,10 @@
            //当循环结束时 q指向null 把头节点指向q 插入队尾
            head.setNext(q);
            return p;
-   
        }
    ```
-
-4. 先序遍历
+   
+4. 4. 先序遍历
 
    ```java
    public class TreeNode {
@@ -149,7 +148,7 @@
 
    
 
-5. 中序遍历
+5. 5. 中序遍历
 
    ```java
    
@@ -184,7 +183,7 @@
 
    
 
-6. 后序遍历
+6. 6. 后序遍历
 
    ```java
    
@@ -219,7 +218,7 @@
        }
    ```
 
-7. 层序遍历
+7. 7. 层序遍历
 
    ```java
       //二叉树层序遍历
@@ -250,7 +249,7 @@
        }
    ```
 
-8. LRU
+8. 8. LRU
 
    ```java
    /**
@@ -291,7 +290,7 @@
 
    
 
-9. 链表有环
+9. 9. 链表有环
 
    ```java
    class ListNode {
@@ -323,7 +322,7 @@
    
    ```
 
-10. 反转m-n的链表
+   10. 反转m-n的链表
 
    ```java
     ListNode dummy = new ListNode(0);
@@ -342,71 +341,130 @@
      return dummy.next;
    ```
 
-11. 合并两个有序链表
+   11. 合并两个有序链表
 
-    ```java
-    class Solution {
-        public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
-            if (l1 == null) {
-                return l2;
-            } else if (l2 == null) {
-                return l1;
-            } else if (l1.val < l2.val) {
-                l1.next = mergeTwoLists(l1.next, l2);
-                return l1;
-            } else {
-                l2.next = mergeTwoLists(l1, l2.next);
-                return l2;
-            }
-    
-        }
-    }
-    ```
-
-12. 找出集合的所有子集
-
-    ```java
-    class Solution {
-        List<Integer> t = new ArrayList<Integer>();
-        List<List<Integer>> ans = new ArrayList<List<Integer>>();
-    
-        public List<List<Integer>> subsets(int[] nums) {
-            int n = nums.length;
-            for (int mask = 0; mask < (1 << n); ++mask) {
-                t.clear();
-                for (int i = 0; i < n; ++i) {
-                    if ((mask & (1 << i)) != 0) {
-                        t.add(nums[i]);
-                    }
-                }
-                ans.add(new ArrayList<Integer>(t));
-            }
-            return ans;
-        }
-    }
-    ```
-
-13. KMP匹配
-
-    ```java
-    void Getnext(int next[],String t)
-    {
-       int j=0,k=-1;
-       next[0]=-1;
-       while(j<t.length-1)
-       {
-          if(k == -1 || t[j] == t[k])
-          {
-             j++;k++;
-             if(t[j]==t[k])//当两个字符相同时，就跳过
-                next[j] = next[k];
-             else
-                next[j] = k;
-          }
-          else k = next[k];
+   ```java
+   class Solution {
+       public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+           if (l1 == null) {
+               return l2;
+           } else if (l2 == null) {
+               return l1;
+           } else if (l1.val < l2.val) {
+               l1.next = mergeTwoLists(l1.next, l2);
+               return l1;
+           } else {
+               l2.next = mergeTwoLists(l1, l2.next);
+               return l2;
+           }
+   
        }
-    }
-    ```
+   }
+   ```
 
-    
+   12. 找出集合的所有子集
+
+   ```java
+   class Solution {
+       List<Integer> t = new ArrayList<Integer>();
+       List<List<Integer>> ans = new ArrayList<List<Integer>>();
+   
+       public List<List<Integer>> subsets(int[] nums) {
+           int n = nums.length;
+           for (int mask = 0; mask < (1 << n); ++mask) {
+               t.clear();
+               for (int i = 0; i < n; ++i) {
+                   if ((mask & (1 << i)) != 0) {
+                       t.add(nums[i]);
+                   }
+               }
+               ans.add(new ArrayList<Integer>(t));
+           }
+           return ans;
+       }
+   }
+   ```
+
+   13. KMP匹配
+
+   ```java
+   void Getnext(int next[],String t)
+   {
+      int j=0,k=-1;
+      next[0]=-1;
+      while(j<t.length-1)
+      {
+         if(k == -1 || t[j] == t[k])
+         {
+            j++;k++;
+            if(t[j]==t[k])//当两个字符相同时，就跳过
+               next[j] = next[k];
+            else
+               next[j] = k;
+         }
+         else k = next[k];
+      }
+   }
+   ----------------------------------------------------------
+   public class KMP {
+   
+       /**
+        * 求出一个字符数组的next数组
+        * @param t 字符数组
+        * @return next数组
+        */
+       public static int[] getNextArray(char[] t) {
+           int[] next = new int[t.length];
+           next[0] = -1;
+           next[1] = 0;
+           int k;
+           for (int j = 2; j < t.length; j++) {
+               k=next[j-1];
+               while (k!=-1) {
+                   if (t[j - 1] == t[k]) {
+                       next[j] = k + 1;
+                       break;
+                   }
+                   else {
+                       k = next[k];
+                   }
+                   next[j] = 0;  //当k==-1而跳出循环时，next[j] = 0，否则next[j]会在break之前被赋值
+               }
+           }
+           return next;
+       }
+   
+       /**
+        * 对主串s和模式串t进行KMP模式匹配
+        * @param s 主串
+        * @param t 模式串
+        * @return 若匹配成功，返回t在s中的位置（第一个相同字符对应的位置），若匹配失败，返回-1
+        */
+       public static int kmpMatch(String s, String t){
+           char[] s_arr = s.toCharArray();
+           char[] t_arr = t.toCharArray();
+           int[] next = getNextArray(t_arr);
+           int i = 0, j = 0;
+           while (i<s_arr.length && j<t_arr.length){
+               if(j == -1 || s_arr[i]==t_arr[j]){
+                   i++;
+                   j++;
+               }
+               else
+                   j = next[j];
+           }
+           if(j == t_arr.length)
+               return i-j;
+           else
+               return -1;
+       }
+       public static void main(String[] args) {
+           System.out.println(kmpMatch("abcabaabaabcacb", "abaabcac"));
+       }
+   
+   }
+   ```
+
+   
+
 
