--- a/啊_系统设计.md
+++ b/啊_系统设计.md
@@ -1,4 +1,4 @@
-1. 秒杀系统
+1. ### 秒杀系统
 
    - 前端物理限流(按钮置灰)
 
@@ -16,7 +16,7 @@
 
      
 
-2. 接口幂等性
+2. ### 接口幂等性
 
    读取和删除 天然幂等
 
@@ -46,7 +46,7 @@
 
      
 
-3. OOM排查
+3. ### OOM排查
 
    XX:+HeapDumpOnOutOfMemoryError 开启堆日志自动打印，出错时可直接查看
 
@@ -58,7 +58,7 @@
 
    
 
-4. CPU使用率过高
+4. ### CPU使用率过高
 
    ps 拿到pid
 
@@ -66,4 +66,16 @@
 
    jsatck 打印栈日志
 
-   jnap 打印堆日志
+   jdump 打印堆日志
+   
+5. ### 分布式事务
+
+   [分布式事务四种解决方案](https://www.cnblogs.com/mayundalao/p/11798502.html)
+
+   [敖丙分布式事务](https://zhuanlan.zhihu.com/p/183753774)
+
+   - 2PC
+   - 3PC 多引入准备阶段,超时机制
+   - TCC
+   - 本地消息表
+   - RocketMQ事务消息,只有这个支持,其他主流MQ均不支持
