--- a/啊_网络.md
+++ b/啊_网络.md
@@ -1,9 +1,9 @@
-- Nginx
+1. Nginx
 
-  - **正向代理：**某些情况下，代理我们用户去访问服务器，需要用户手动的设置代理服务器的 ip 和端口号。正向代理比较常见的一个例子就是 VPN 了。
-  - **反向代理：** 是用来代理服务器的，代理我们要访问的目标服务器。代理服务器接受请求，然后将请求转发给内部网络的服务器，并将从服务器上得到的结果返回给客户端，此时代理服务器对外就表现为一个服务器。
+- **正向代理：**某些情况下，代理我们用户去访问服务器，需要用户手动的设置代理服务器的 ip 和端口号。正向代理比较常见的一个例子就是 VPN 了。
+- **反向代理：** 是用来代理服务器的，代理我们要访问的目标服务器。代理服务器接受请求，然后将请求转发给内部网络的服务器，并将从服务器上得到的结果返回给客户端，此时代理服务器对外就表现为一个服务器。
 
-  ![正向代理](http://my-blog-to-use.oss-cn-beijing.aliyuncs.com/18-11-15/60925795.jpg)
+![正向代理](http://my-blog-to-use.oss-cn-beijing.aliyuncs.com/18-11-15/60925795.jpg)
 
 ![反向代理](http://my-blog-to-use.oss-cn-beijing.aliyuncs.com/18-11-15/62563930.jpg)
 
@@ -22,11 +22,11 @@ Nginx 有以下 5 个优点：
 Nginx 的四个主要组成部分
 
 - Nginx 二进制可执行文件：由各模块源码编译出一个文件
-
 - nginx.conf 配置文件：控制 Nginx 行为
-
 - acess.log 访问日志： 记录每一条 HTTP 请求信息
-
 - error.log 错误日志：定位问题
 
-  
+2. TCP
+
+   [TCP详解](https://blog.csdn.net/sinat_36629696/article/details/80740678)
+
