--- a/个性化设置.md
+++ b/个性化设置.md
@@ -10,7 +10,7 @@
 
 3. 路由器：zxd.070707. ygwddfym
 
-4. gjj 702220zxd
+4. 公积金 702220zxd
 
 6. Linerbl@163.com
 
@@ -19,4 +19,8 @@
 6. 12306
    zlg928181736
    zlg845369629
+   
+7. 小米路由器 zxd.19930831 
+
+8. a站  13810249466  19930831zxd
 
