--- a/啊_面试邀约.md
+++ b/啊_面试邀约.md
@@ -5,7 +5,7 @@
 5. 火花思维 12-28 16:00 下周一
 6. 小米 12-28 19:00 下周一
 7. 展心展力 12-29 11:00 下周二 ***钉钉***
-8. 牛卡福 12-29 14:00 下周二 *现场面 二面* 
+8. 牛卡福 12-29 14:00 下周二 ***现场面 二面*** 
 9. 58 12-29 18:00 下周二 ***qq邮箱***
 10. 少年得到 12-30 11:00 下周三 ***vx群聊***
 11. 58 12-30 16:00 下周三 ***qq邮箱 二面***
@@ -41,7 +41,18 @@
 41. 京东 1-18 19:00 下下下周一
 42. 中国电子系统 1-19 15:00 下下周二 ***qq邮箱 现场面试***
 43. 好未来 1-19 19:00 下下下周二
-44. 领格 1-23 15:00 下下下周六
+44. 好未来 1-20 16:00 下下下周三 ***vx 上地 二面***
+45. 瑞幸咖啡 1-21 11:00 下下下周四 ***电话***
+46. 好未来 1-21 15:00 下下下周四 ***vx***
+47. 瑞幸咖啡  1-22 15:00 下下下周五 ***现场***
+51. 好未来 1-25 19:00 下下下下周一   ***电话 hr面***
+49. 好未来 1-27 19:00 下下下周三 ***瞩目***
+50. 凌雄 1-30 16:00 下下下下周六
+51. inmobi 2-3 20:00 下下下下下周三
+
+
+
+周六上午去apple
 
 
 
