--- a/个性化设置.md
+++ b/个性化设置.md
@@ -8,19 +8,38 @@
 
    rbladmin
 
-3. 路由器：zxd.070707. ygwddfym
+3. 路由器：
 
-4. 公积金 702220zxd
+   zxd.070707 
 
-6. Linerbl@163.com
+    ygwddfym
+
+4. 公积金 
+
+   702220zxd
+
+5. 163邮箱
+
+   Linerbl@163.com
 
    123321zXD
-   
+
 6. 12306
    zlg928181736
    zlg845369629
-   
-7. 小米路由器 zxd.19930831 
 
-8. a站  13810249466  19930831zxd
+7. 小米路由器 
 
+   zxd.19930831 
+
+8. a站  
+
+   13810249466  
+
+   19930831zxd
+
+9. [广西壮族自治区图书馆](http://fgha77c73fa52df8410f98cd232599e86daehn6cv056b9fv06bop.fffh.res.gxlib.org.cn/kns55/)
+
+   13810249466
+
+   zxd.989898
