--- a/名人名言.md
+++ b/名人名言.md
@@ -29,8 +29,6 @@
 
 7. 有时候真实比小说更加荒诞，因为虚构是在一定逻辑下进行的，而现实往往毫无逻辑可言。   -----马克·吐温
 
-8. 我觉得平凡的人可以选择变得不平凡啊。 -----埃隆马斯克 钢铁侠原型
-
 9. 寂寞是不能排遣，打发的。我太明白，遣而遣之，随即，它又回来了。而且这回，它要的更多。 -----朱天文《荒人手记》
 
 10. 人类总是从自己选择的人生 看向自己没有选择的另一种人生， 感到羡慕，感到后悔。-----川村元气《如果这世界猫消失了》
@@ -65,4 +63,6 @@
 
 25. 椅子是杀手。
 
-26. 对人一块一，对物九毛九。
+25. 对人一块一，对物九毛九。
+
+26. 先穿袜子后穿鞋,先当孙子后当爹
