--- a/个性化设置.md
+++ b/个性化设置.md
@@ -2,37 +2,43 @@
 
     zXD123321
 
-2. mysql
+2. **mysql**
 
    root 
 
    rbladmin
 
-3. 路由器：
+3. **路由器**
 
    zxd.070707 
 
     ygwddfym
 
-4. 公积金 
+4. **小米路由器** 
+
+   192.168.31.1
+
+   zxd.19930831 
+
+   **wifi**
+
+   rbl.070707
+
+5. **公积金** 
 
    702220zxd
 
-5. 163邮箱
+6. **163邮箱**
 
    Linerbl@163.com
 
    123321zXD
 
-6. 12306
+7. **12306**
    zlg928181736
    zlg845369629
 
-7. 小米路由器 
-
-   zxd.19930831 
-
-8. a站  
+8. **a站**  
 
    13810249466  
 
@@ -43,3 +49,9 @@
    13810249466
 
    zxd.989898
+
+10. **易点租**
+
+   13810249466	
+
+   Zxd142729
