--- a/啊_基础.md
+++ b/啊_基础.md
@@ -60,7 +60,7 @@
      - LinkedBiockingQueue 单向队列
      - LinkedBlockingDeque 双向队列
      - DelayQueue 延时队列  底层 PriorityQueue 默认只保证队头元素是最小
-     - PriorityBlockingQueue  PriorityQueue的线程安全版本
+     - PriorityBlockingQueue  PriorityQueue的线程安全版本,带排序的 BlockingQueue 实现，其并发控制采用的是 ReentrantLock，队列为无界队列
      - SynchronousQueue  同步队列。读写线程同步 一个写等读完才能返回执行下一步
 
 4. **锁**
