--- a/啊_框架.md
+++ b/啊_框架.md
@@ -75,7 +75,9 @@
 
    @ComponentScan
 
-   
+   [为什么可以使用java -jar运行springboot 的 jar包](https://blog.csdn.net/Eflyings/article/details/116014058)
+
+   1. 使用Main-Class JarLauncher反射调用Strart-Class SpringSecutiryApplication
 
 4. **Spring Cloud**
 
