--- a/啊_缓存.md
+++ b/啊_缓存.md
@@ -1,11 +1,11 @@
 ### 一、数据类型
 
 1. String：缓存  计数器 共享用户Session
-
 2. Hash
 3. List：有序链表。消息队列  文章列表或者数据分页展示
 4. Set
 5. ZSet：排行榜
+6. HyperLogLog ：基数统计,有误差
 
 - 只有Zset和集群内部的节点数据结构 使用跳表
 - select poll epoll
