--- a/名人名言.md
+++ b/名人名言.md
@@ -51,7 +51,7 @@
 
 19. 后来我终于明白，他尽管跟天气一样难以预料，却也跟天气一样无可避免。 ----安吉拉‧卡特《焚舟纪》
 
-20. 这世界最不易被征服的，是内心有美的追求的人。因为美不只是美本身，它还对应着丑与世间的是非。 ----熊培云《慈悲与玫瑰》
+20. #### 这世界最不易被征服的，是内心有美的追求的人。因为美不只是美本身，它还对应着丑与世间的是非。 ----熊培云《慈悲与玫瑰》
 
 21. 我们各自心中都有某些不愿意摒弃的东西，即使这个东西使我们痛苦得要死。我们就是这样，就像古老的凯尔特传说中的荆棘鸟，泣血而啼，呕出了血淋淋的心而死。我们自己制造了自己的荆棘，而且从来不计算其代价，我们所做的一切就是忍受痛苦的煎熬，并且告诉自己这非常值得。 ----考琳·麦卡洛《荆棘鸟》
 
@@ -68,3 +68,9 @@
 26. 先穿袜子后穿鞋,先当孙子后当爹
 
 27. 天雨虽宽不润无根之草，佛法虽广不度无缘之人
+
+28. 如果我虚度光阴,那就请结束我的一生
+
+     如果你用奉承谄媚愚弄我,那我便自得其乐
+
+     如果你用荣华富贵诱惑我,那即便我末日来临,我也要赌个输赢----歌德
