--- a/神棍.md
+++ b/神棍.md
@@ -1,5 +1,6 @@
 ## 埃德加·凯西[1877年3月18日-1945年1月3日]
 
+```
 美国西部海岸及东南沿海将为海水吞没；
 
 在Pelee和Vesuvius火山爆发后的九十天内，强力的地震将使[盐湖城](https://baike.baidu.com/item/盐湖城)以西的部分地区沉入水中；
@@ -55,10 +56,74 @@
 1. 搜集关于他的催眠,its fun
 2. 关于亚特兰蒂斯
 3. 柏拉图对话集 有多次提到亚特兰蒂斯
-
-
+```
 
 ## 尼古拉·特斯拉
 
+```
 1. 地球有频率，1小时40分钟
+```
 
+# 公司作息表
+
+```
+https://docs.qq.com/sheet/DVmhnRG15TG1Tb2Js?scene=363321ed5b30ef4c7b8e9256yc6km1&_t=1633793724845&tab=BB08J2
+
+```
+
+# 图书出版社
+
+```
+1.商务印书馆
+2.中华书局
+```
+
+## 灵异
+
+1. 间隔一天,听到了“天使”的回应 ？外婆说--听到不再音频里的声音
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 隐藏自己
